--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport"
         content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
-    <link rel="stylesheet" href="./css/css1.css">
+    <link rel="stylesheet" href="./css1.css">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="./js/translate.js"></script>
-    <script src="./js/backoffer.js"></script>
+    <script src="./translate.js"></script>
+    <script src="./backoffer.js"></script>
 </head>
     <body style="">
         <div class="main">
@@ -17,7 +17,7 @@
                 <div class="step">
                     <div class="step__inner">
                         <div class="step__header">
-                            <div class="left"><img src="./images/m1.jpg"><span class="textName0">
+                            <div class="left"><img src="./m1.jpg"><span class="textName0">
                                     Kim
                                 </span>
                             </div>
@@ -47,7 +47,7 @@
                 <div class="step">
                     <div class="step__inner">
                         <div class="step__header">
-                            <div class="left"><img src="./images/m2.jpg"><span class="textName1">
+                            <div class="left"><img src="./m2.jpg"><span class="textName1">
                                     Hanna
                                 </span>
                             </div>
@@ -79,7 +79,7 @@
                 <div class="step">
                     <div class="step__inner">
                         <div class="step__header">
-                            <div class="left"><img src="./images/3.jpg"><span class="textName2">
+                            <div class="left"><img src="./3.jpg"><span class="textName2">
                                     Emily
                                 </span>
                             </div>
@@ -109,7 +109,7 @@
                 <div class="step">
                     <div class="step__inner">
                         <div class="step__header">
-                            <div class="left"><img src="./images/4.jpg"><span class="textName3">
+                            <div class="left"><img src="./4.jpg"><span class="textName3">
                                     Mei
                                 </span>
                             </div>
@@ -139,7 +139,7 @@
                 <div class="step">
                     <div class="step__inner">
                         <div class="step__header">
-                            <div class="left"><img src="./images/5.jpg"><span class="textName5">
+                            <div class="left"><img src="./5.jpg"><span class="textName5">
                                     Tina
                                 </span>
                             </div>
